make the copper colour more coppery

--- a/templates/card.svg.tt
+++ b/templates/card.svg.tt
@@ -11,7 +11,7 @@
             }
 
             .red-suit {
-                fill: sienna;
+                fill: indianred;
                 stroke: white;
                 stroke-width: 1;
             }
