change ID from bell to pip

--- a/templates/bell.svg.tt
+++ b/templates/bell.svg.tt
@@ -1,7 +1,7 @@
 <symbol width="37.437325" 
         height="43.375137" 
         viewBox="0 0 37.437325 43.375137" 
-        id="bell">
+        id="pip">
     <circle class="red-suit"
             id="hammer"
             cx="18.718662"
