move style to its own template
and make the outline its own class

--- a/templates/bell.svg.tt
+++ b/templates/bell.svg.tt
@@ -2,19 +2,19 @@
         height="43.375137" 
         viewBox="0 0 37.437325 43.375137" 
         id="pip">
-    <circle class="red-suit"
+    <circle class="red-suit outline"
             id="hammer"
             cx="18.718662"
             cy="35.256096"
             r="6" />
-    <rect class="red-suit"
+    <rect class="red-suit outline"
           id="loop"
           width="7.8480897"
           height="11.996511"
           x="14.794621"
           y="1"
           ry="2.2360439" />
-    <path class="red-suit"
+    <path class="red-suit outline"
           d="m 18.718324,9.108484 c -6.519101,0 -9.039825,2.846795 -11.766687,13.456993 -4.531581,3.297507 -5.840254,9.152489 -5.928984,15.528739 6.106965,-3.01824 12.785366,-4.09901 17.695671,-4.17502 4.91031,0.076 11.589383,1.15678 17.696355,4.17502 -0.0887,-6.37625 -1.397406,-12.231232 -5.928988,-15.528739 C 27.758829,11.955279 25.237429,9.108484 18.718324,9.108484 Z"
           id="body" />
 </symbol>
